sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:9: error: ')' expected but ',' found.
				if(i+1,i){
                                      ^AlgCocktailSort2:13: error: illegal start of simple expression
		}
                ^AlgCocktailSort2:15: error: ')' expected but ',' found.
			if(i+1,i){
                              ^AlgCocktailSort2:19: error: illegal start of simple expression
		}
                ^